# HealthMate

./: .env.example  .gitignore  docker-compose.yml  test_consultation_cli.py  test_search_drugs.py
.github/: CONTRIBUTING.md
ai/: .gitignore
ai/.claude/: settings.local.json
ai/services/docs/: API_CONTRACTS.md  project-fix-guide.md
ai/services/document-parser/: Dockerfile  README.md  REVIEW.md  pyproject.toml  requirements.txt
ai/services/document-parser/src/: main.py  utils.py
ai/services/document-parser/src/docparser/application/: __init__.py  service.py
ai/services/document-parser/src/docparser/core/: __init__.py  config.py  logger.py
ai/services/document-parser/src/docparser/domain/: __init__.py
ai/services/document-parser/src/docparser/infrastructure/kafka/: consumer.py  producer.py
ai/services/document-parser/src/docparser/infrastructure/minio/: __init__.py  storage.py
ai/services/document-parser/src/docparser/infrastructure/pars/: __init__.py  processor.py  tree_builder.py
ai/services/document-parser/test/: conftest.py
ai/services/document-parser/test/integration/: conftest.py  test_document_processing_service.py  test_kafka_flow.py
ai/services/document-parser/test/python/: conftest.py
ai/services/document-parser/test/python/application/: test_document_processing_service.py
ai/services/document-parser/test/python/domain/: test_domain_models.py
ai/services/document-parser/test/python/infrastructure/: test_kafka_flow.py  test_minio_storage.py  test_processor.py  test_tree_builder.py
ai/services/document-parser/test/resources/: __init__.py
ai/services/document-parser/test/resources/request/domain/: incoming_event.json
ai/services/document-parser/test/resources/request/kafka/: incoming_event.json  incoming_event_commit.json
ai/services/document-parser/test/resources/request/pipeline/: sample_event.json
ai/services/document-parser/test/resources/request/processor/: sample_markdown_flat.md  sample_markdown_nested.md  sample_simple.htm  sample_with_tables.htm  sample_with_toc.htm
ai/services/document-parser/test/resources/stub/pipeline/: processor_result.json  tree_builder_result.json
ai/services/rag-system/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
ai/services/rag-system/src/: main.py
ai/services/rag-system/src/rag/: app.py  indexer.py
ai/services/rag-system/src/rag/api/: deps.py  router.py
ai/services/rag-system/src/rag/api/endpoints/: chat.py  documents.py  medications.py  query.py  tips.py
ai/services/rag-system/src/rag/application/: document_processor.py
ai/services/rag-system/src/rag/core/: config.py  embeddings.py  llm_client.py  logger.py
ai/services/rag-system/src/rag/database/: vector_db.py
ai/services/rag-system/src/rag/dialogue/: anamnesis.py  prompts.py  service.py  session.py  stages.py
ai/services/rag-system/src/rag/domain/: events.py
ai/services/rag-system/src/rag/infrastructure/kafka/: consumer.py  producer.py
ai/services/rag-system/src/rag/infrastructure/minio/: storage.py
ai/services/rag-system/src/rag/medical/: disclaimer.py  drugs_client.py  profile_client.py  safety_checker.py
ai/services/rag-system/src/rag/parsing/: __init__.py  html_parser.py
ai/services/rag-system/src/rag/retrieval/: chunking.py  reranker.py  retriever.py  sparse.py
ai/services/rag-system/test/python/: conftest.py
ai/services/rag-system/test/python/api/: test_chat_endpoint.py  test_medications_endpoint.py  test_query_endpoint.py
ai/services/rag-system/test/python/core/: test_embedding_service.py  test_llm_client.py  test_settings.py
ai/services/rag-system/test/python/database/: test_vector_retrieval.py  test_vector_store.py
ai/services/rag-system/test/python/domain/: test_events.py
ai/services/rag-system/test/python/infrastructure/: test_kafka_consumer.py  test_minio_client.py  test_status_producer.py
ai/services/rag-system/test/python/integration/: test_chat_flow.py  test_document_pipeline.py
ai/services/rag-system/test/python/service/: test_chunking_service.py  test_dialogue_service.py  test_disclaimer.py  test_document_processor.py  test_hybrid_retriever.py  test_safety_checker.py  test_session_manager.py
ai/services/rag-system/test/resources/: __init__.py
ai/services/rag-system/test/resources/expected/chat/: anamnesis_response.json  recommendation_response.json
ai/services/rag-system/test/resources/expected/medications/: danger_response.json  ok_response.json
ai/services/rag-system/test/resources/request/chat/: chat_basic.json  chat_minimal.json
ai/services/rag-system/test/resources/request/common/: user_context.json  user_profile_internal.json
ai/services/rag-system/test/resources/request/database/: seed_vectors.json
ai/services/rag-system/test/resources/request/document_pipeline/: kafka_event.json
ai/services/rag-system/test/resources/request/medications/: validate_aspirin.json  validate_chronic_condition.json  validate_drug_interaction.json  validate_minimal.json  validate_safe.json
ai/services/rag-system/test/resources/stub/chat/: anamnesis_query_response.json  recommendation_query_response.json
ai/services/rag-system/test/resources/stub/common/: json_tree.json  llm_responses.json  retrieved_chunks.json
ai/services/rag-system/uml/: architecture.puml  document_processing.puml  message_flow.puml  package_structure.puml
backend/: .env.example  Dockerfile  pom.xml
backend/postman/: HealthMate Backend.postman_collection.json  HealthMate Backend.postman_environment.json
backend/src/main/resources/: application.yml
backend/src/test/resources/: application-test.yml
frontend/: .env.development  package-lock.json  package.json
frontend/src/: App.vue  HealthMateApp.vue  main.js
frontend/src/assets/: base.css  main.css
frontend/src/features/session/: useSession.js
frontend/src/shared/api/: config.js  httpClient.js
frontend/src/shared/components/: Icon.vue
frontend/src/views/: healthmate-ai-consult.vue  healthmate-medicines.vue  healthmate-registration.vue  healthmate-statistics.vue  healthmate.vue
(+102 files in other folders)
