[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "document-parser"
version = "0.1.0"
description = "Medical document parsing service"
requires-python = ">=3.11"
dependencies = [
    "aiokafka>=0.11.0",
    "minio>=7.2.0",
    "pymupdf>=1.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "structlog>=24.0.0",
    "python-dotenv>=1.0.0",
    "idna>=3.0",  # Добавляем недостающие зависимости
    "setuptools>=65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

[tool.setuptools]
packages = [
    "core",
    "domain",
    "application",
    "infrastructure",
    "infrastructure.kafka",
    "infrastructure.minio",
    "infrastructure.pdf",
]
package-dir = {"" = "src"}

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "DTZ", "T20", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false  # Меняем на false, чтобы не было проблем
warn_return_any = true
warn_unused_configs = true