[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "document-parser"
version = "0.1.0"
description = "Сервис парсинга медицинских документов (инструкции к лекарствам)"
requires-python = ">=3.11"
dependencies = [
    "aiokafka>=0.10.0,<1.0",
    "minio>=7.2.0,<8.0",
    "beautifulsoup4>=4.12.0,<5.0",
    "html2text>=2024.2.26",
    "lxml>=5.2.0",
    "charset-normalizer>=3.3.0",
    "pydantic>=2.6.0,<3.0",
    "pydantic-settings>=2.1.0,<3.0",
    "structlog>=24.1.0",
    "tenacity>=8.2.0,<10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

[tool.setuptools]
packages = [
    "docparser",
    "docparser.core",
    "docparser.domain",
    "docparser.application",
    "docparser.infrastructure",
    "docparser.infrastructure.kafka",
    "docparser.infrastructure.minio",
    "docparser.infrastructure.pars",
]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["test/python"]
addopts = ""
# Coverage: run manually with:
#   pytest --cov=src --cov-report=term-missing --cov-fail-under=80

[tool.coverage.run]
omit = ["src/main.py", "src/utils.py"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "DTZ", "T20", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
