[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-system"
version = "0.1.0"
description = "Medical RAG system with dialogue management"
requires-python = ">=3.11"
dependencies = [
    # FastAPI
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    
    # LLM & Embeddings
    "openai>=1.13.0",  # Совместим с DeepSeek API
    "anthropic>=0.18.0",  # Если захочешь переключиться на Claude
    "tiktoken>=0.6.0",
    
    # Vector DB
    "qdrant-client>=1.8.0",
    
    # Database
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",  # Async PostgreSQL driver
    "alembic>=1.13.0",
    
    # Redis
    "redis>=5.0.0",
    
    # Kafka
    "aiokafka>=0.11.0",
    
    # Search & Retrieval
    "rank-bm25>=0.2.2",  # BM25 для гибридного поиска
    "sentence-transformers>=2.5.0",  # Для reranking
    "minio>=7.2.0",

    # Utils
    "structlog>=24.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "tenacity>=8.2.0",  # Retry logic
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "httpx>=0.27.0",  # Для тестирования API
    "fakeredis[aioredis]>=2.21.0",  # In-process Redis для интеграционных тестов
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "DTZ", "T20", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Можно включить позже
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["test/python"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ""
# Coverage: pytest --cov=src --cov-report=term-missing --cov-fail-under=80

[tool.coverage.run]
omit = [
    "src/main.py",
    "src/rag/core/logger.py",
    "src/rag/medical/profile_client.py",
    "src/rag/retrieval/reranker.py",
    "src/rag/api/endpoints/documents.py",
    "src/rag/*/__init__.py",
]
