[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-system"
version = "0.1.0"
description = "Medical RAG system with dialogue management (REST-only)"
requires-python = ">=3.11"
dependencies = [
    # FastAPI
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    
    # LLM (DeepSeek via OpenAI-compatible API)
    "openai>=1.13.0",
    
    # Vector DB & Search
    "qdrant-client>=1.8.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=2.5.0",

    # HTML parsing for Vidal docs
    "beautifulsoup4>=4.12.0",
    "html2text>=2020.1.16",
    "charset-normalizer>=3.3.0",
    "lxml>=5.0.0",
    
    # Session & Caching
    "redis>=5.0.0",

    # Utils
    "structlog>=24.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "tenacity>=8.2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "DTZ", "T20", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Можно включить позже
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["test/python"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ""
# Coverage: pytest --cov=src --cov-report=term-missing --cov-fail-under=80

[tool.coverage.run]
omit = [
    "src/main.py",
    "src/rag/core/logger.py",
    "src/rag/medical/profile_client.py",
    "src/rag/retrieval/reranker.py",
    "src/rag/api/endpoints/documents.py",
    "src/rag/*/__init__.py",
]
